5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1674_1105.log
== TEST (2019-05-01 10:09:56) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao")
print("Entrada:", brasao)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:10:05) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ")
print("Entrada:", brasao)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:10:19) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower
print("Entrada:", brasao)
-- OUTPUT:
Entrada: <built-in method lower of str object at 0x7f018d9bc5a8>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:10:36) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:13:43) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brsao == lobo):
	print ("Casa: Stark")
elif (brasao = leao):
	print ("Casa: Lennister")
-- ERROR:
File "XXXX", line 8
    elif (brasao = leao):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:13:51) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brsao == lobo):
	print ("Casa: Stark")
elif (brasao == leao):
	print ("Casa: Lennister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (brsao == lobo):
NameError: name 'brsao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:14:36) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brsao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (brsao == "lobo"):
NameError: name 'brsao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:15:56) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brsao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (brsao == "lobo"):
NameError: name 'brsao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:16:10) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:16:21) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == lobo):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:16:39) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif
-- ERROR:
File "XXXX", line 10
    elif
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:16:46) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:19:52) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:20:01) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:20:10) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:23:31) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
elif (brasao == "sol"):
	print ("Casa: Martell")
elif (brasao == "lula"):
	print ("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print ("Casa: Bolton")
elif (brasao == "turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:23:42) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
elif (brasao == "sol"):
	print ("Casa: Martell")
elif (brasao == "lula"):
	print ("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print ("Casa: Bolton")
elif (brasao == "turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:23:50) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
elif (brasao == "sol"):
	print ("Casa: Martell")
elif (brasao == "lula"):
	print ("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print ("Casa: Bolton")
elif (brasao == "turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:23:57) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
elif (brasao == "sol"):
	print ("Casa: Martell")
elif (brasao == "lula"):
	print ("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print ("Casa: Bolton")
elif (brasao == "turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:24:45) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
elif (brasao == "sol"):
	print ("Casa: Martell")
elif (brasao == "lula"):
	print ("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print ("Casa: Bolton")
elif (brasao == "turta"):
	print ("Casa: Tully")
else:
	print ("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 10:24:55) 
-- CODE:
# brasao = descriçâo do brasão
brasao = input("Determine o brasao: ").lower()
print("Entrada:", brasao)

#casas
if (brasao == "lobo"):
	print ("Casa: Stark")
elif (brasao == "leao"):
	print ("Casa: Lennister")
elif (brasao == "veado"):
	print ("Casa: Baratheon")
elif (brasao == "dragao"):
	print ("Casa: Targaryen")
elif (brasao == "rosa"):
	print ("Casa: Tyrell")
elif (brasao == "sol"):
	print ("Casa: Martell")
elif (brasao == "lula"):
	print ("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print ("Casa: Bolton")
elif (brasao == "turta"):
	print ("Casa: Tully")
else:
	print ("Brasao invalido")
-- EXECUTION TIME:
0.208296
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
